Fixed overflow bug in search results

--- a/source/styles/modules/geocodes/search.styl
+++ b/source/styles/modules/geocodes/search.styl
@@ -25,6 +25,7 @@
 			&:last-of-type
 				border-bottom-width 0
 			> a
+				box-sizing border-box
 				display block
 				height 100%
 				width 100%
